--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
 	"name":"chatapp",
-	"version":"0.0.1",
+	"version":"0.2.5",
 	"private":"true",
 	"dependencies":{
 		"socket.io":"*",
 		"express":"*"
-	}
+	},
+	"engines": {
+    "node": "5.9.1"
+  }
 
 }
